# named_enum

./: .buildinfo  .gitignore  .pyup.yml  .readthedocs.yml  .travis.yml  01_about.html  02_source.html  03_authors.html  03_release_notes.html  04_authors.html  04_contributing.html  05_contributing.html  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  appveyor.yml  coverage.xml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  quick_start.html  search.html  searchindex.js  setup.cfg  setup.html  setup.py  source_code.html  test-requirements.txt  tox.ini
.github/workflows/: main.yml  release.yml  sphinx.yml  test.yml
_modules/: __init__.html  index.html
_modules/named_enum/: enum.html  meta.html
_sources/: 02_source.rst.txt  03_authors.rst.txt  03_release_notes.rst.txt  index.rst.txt  quick_start.rst.txt  setup.rst.txt
docs/: conf.py  index.rst  quick_start.rst  release_notes.rst  setup.rst  source_code.rst
docs/source/: 02_source.rst  03_release_notes.rst  04_authors.rst  conf.py  index.rst  quick_start.rst  setup.rst
named_enum/: __init__.py  enum.py  meta.py  version.py
requirements/: dev.txt  doc.txt
src/named_enum/: __init__.py
tests/: conftest.py  helper.py  test_cls_ExtendedEnum.py  test_cls_LabeledEnum.py  test_cls_NamedEnum.py  test_cls_NamedEnum.txt  test_cls_NamedEnumMeta.py  test_cls_PairEnum.py  test_cls_PairEnum.txt  test_cls__NamedEnumDict.py  test_func_namedenum.py  test_func_namedenum.txt  test_version.py
tests/enum/: test_ExtendedEnum.py  test_LabeledEnum.py  test_PairEnum.py  test_cls_NamedEnum.py  test_cls_NamedEnum.txt  test_cls_PairEnum.txt  test_func_namedenum.py  test_func_namedenum.txt
tests/meta/: test_NamedEnumMeta.py  test__NamedEnumDict.py
