[tool.poetry]
name = "named-enum"
version = "1.4.0"
description = "Python named enumeration, which extends the built-in Enum class with extra features."
authors = ["Zhiwei Zhang <zhiwei2017@gmail.com>", "Jianlan Shao <jianlan.shao@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/zhiwei2017/named_enum"
documentation = "https://zhiwei2017.github.io/named_enum/"
keywords = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation",
    "Topic :: Utilities",
    "Natural Language :: English",
    "Intended Audience :: Developers"
]
packages = [{include = "named_enum"}]

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.group.dev.dependencies]
bandit = "~1.7"
flake8 = "~6.1"
mypy = "~1.6"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "~7.4"
pytest-cov = "~4.1"
codecov = "~2.1"
tox = "~3.28"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "~7.1"
sphinx_rtd_theme = "~1.3"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
doctest_encoding = "latin1"
addopts = "--verbose --doctest-modules --doctest-glob=tests/*.txt --cov-report term-missing --cov-report=xml --cov=./named_enum"
